2005-11-12    <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (embed_mainloop): Fix handling of globals for
	embedded instances.  I added a user_global_ns attribute to the
	InteractiveShell class to handle this.

2005-10-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellGTK.mainloop): Change timeout_add to
	idle_add, which fixes horrible keyboard lag problems under gtk 2.6
	(reported under win32, but may happen also in other platforms).
	Bug report and fix courtesy of Sean Moore <smm-AT-logic.bm>

2005-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_psearch): new support for wildcard
	patterns.  Now, typing ?a*b will list all names which begin with a
	and end in b, for example.  The %psearch magic has full
	docstrings.  Many thanks to Jörgen Stenarson
	<jorgen.stenarson-AT-bostream.nu>, author of the patches
	implementing this functionality.

2005-09-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* Manual: fixed long-standing annoyance of double-dashes (as in
	--prefix=~, for example) being stripped in the HTML version.  This
	is a latex2html bug, but a workaround was provided.  Many thanks
	to George K. Thiruvathukal <gthiruv-AT-luc.edu> for the detailed
	help, and Michael Tobis <mtobis-AT-gmail.com> for getting the ball
	rolling.  This seemingly small issue had tripped a number of users
	when first installing, so I'm glad to see it gone.
	
2005-09-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/numeric_formats.py: fix missing import,
	reported by Stephen Walton.

2005-09-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py: finish demo module, fully documented now.

	* IPython/genutils.py (file_read): simple little utility to read a
	file and ensure it's closed afterwards.

2005-09-23  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (Demo.__init__): added support for individually
	tagging blocks for automatic execution.
